a couple of fixes
Just a few fixes and some stuff to add Box2D as the physics engine

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,5 +75,6 @@
         "future": "cpp",
         "shared_mutex": "cpp",
         "cfenv": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": true
 }
